--- a/src/style/layout/_textarea.scss
+++ b/src/style/layout/_textarea.scss
@@ -3,4 +3,14 @@ textarea {
   width: 90%;
   height: 20vh;
   max-width: 1000px;
+  outline: 0;
+  transition: outline 0.2s ease-in-out;
+
+  -moz-tab-size: 4;
+  -o-tab-size: 4;
+  tab-size: 4;
+}
+
+textarea:focus-visible {
+  outline: 2px solid #696969;
 }
